# Prime-Benchmark

./: .gitignore  CMakeLists.txt  README.md  bench.sh  compile.sh
asm_x86/: a.out  main  main.asm
bash/: main.sh
cluster/: TCPclient.c  TCPclient.h  TCPserver.c  TCPserver.h  TCPutil.c  TCPutil.h  compile.sh  main.c  slave.c
cpp/: main.cpp  prime.pro
cs/: Program.cs
cuda/: a.out  cuda.cu  main.cu
go/: main.go
java/: Alternative.java  main.java
omp/: main.cpp
opencl/: main.cpp
py/: classic.py  main.py  prime.py
rust/: main  main.rs
scala/: main.scala
